--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
-    "outDir": "./static",
-    "rootDir": "static/scripts",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "outDir": "./static/compiled/",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "sourceMap": true,
@@ -12,9 +13,10 @@
   },
   
   "include": [
-    "static/scripts/*"
+    "./scripts/*"
   ],
+
   "exclude": [
-    "node_modules"
+    "node_modules/"
   ]
 }
